# fsevents-tools

./: .gitignore  .travis.yml  Makefile.am  NOTICE  README.md  auto_rsync  autorsync  configure.ac  notifyloop  notifywait.c
doc/: generate_man.sh  notifywait.1  notifywait.1.md
src/: notifywait.c  notifywait.h
tests/: created.t  setup.sh
util_scripts/: auto_rsync.sh  notify_loop.sh
